# puzzle-cubes-old

./: .gitignore  Cargo.toml  LICENSE  README.md
puzzles/: bedlam-cube.txt
src/: main.rs
